--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,25 +17,39 @@ body {
 #navbarContent a{
     font-size: 1.5rem;
     color: black;
-    transition: ease-in-out 1s;
+    transition: ease-in-out 1s
     }
+    span{
+      display: none;
+    }
+
     #navbarContent a:hover{
         transform: scale(1.4);
         transition: ease-in-out 0.8s;
         color: blue;
     }
+   
 }
 @media (max-width: 992px) {
     #navbarContent a{
         font-size: 1.5rem;
         color: black;
-        
         }
         #navbarContent a:active{
            
             color: blue;
         }
-
+        #navbarContent .nav-link {
+          display: flex;
+          align-items: center;
+          gap: 12px;
+         border: 2px solid #8b8a8a;
+         padding-left: 0.5rem;
+         margin-bottom: 0.5rem;
+        }
+        #navbarContent .nav-link:active {
+          background-color: rgb(199, 194, 194);
+}
 }
 #language-switcher:focus{
   box-shadow: none !important;
@@ -95,13 +109,14 @@ footer {
     background-color: white;
 }
 
-body.dark-theme, header.dark-theme #theme-switcher {
+body.dark-theme, header.dark-theme  {
     background-color: #6b6969;
     color:white;
     background-image: url(../img/bg_dark.avif);
     background-position: center;
       background-size: cover; 
-    .navbar, footer, i{
+      
+    .navbar, footer, i, #theme-switcher{
       background-color:#6b6969 !important;
       color: white !important;
     }
