--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -276,13 +276,16 @@ header.dark-theme {
     span {
       color: white;
     }
+    .btn{
+      color: white;
+    }
     .btn.btn-success {
       background-color: green;
       border: none;
     }
   
     .btn.btn-success:hover {
-      color: black;
+    background-color: rgb(0, 90, 0);
     }
   
     .btn.btn-warning {
@@ -291,7 +294,7 @@ header.dark-theme {
     }
   
     .btn.btn-warning:hover {
-      color: black;
+      background-color: rgb(95, 95, 0);
     }
   @media (min-width: 991px) {
     #navbarContent a,i  {
