--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -100,6 +100,29 @@ footer {
   color: black;
   text-decoration: none;
 }
+.btn.btn-success {
+  background-color: green;
+  border: none;
+  color:black;
+  font-weight:500
+}
+
+.btn.btn-success:hover {
+  background-color: rgb(1, 173, 1);
+  color: black;
+}
+
+.btn.btn-warning {
+  background-color: rgb(207, 207, 3);
+  border: none;
+  color: black;
+  font-weight:500
+}
+
+.btn.btn-warning:hover {
+  background-color: rgb(243, 243, 0);
+
+}
 
 @media (min-width: 991px) {
   .contatti i {
@@ -113,23 +136,6 @@ footer {
     transition: ease 1s;
     color: green;
   }
-  .btn.btn-success {
-  background-color: green;
-  border: none;
-}
-
-.btn.btn-success:hover {
-  background-color: rgb(1, 173, 1);
-}
-
-.btn.btn-warning {
-  background-color: rgb(207, 207, 3);
-  border: none;
-}
-
-.btn.btn-warning:hover {
-  background-color: rgb(243, 243, 0);
-}
 }
 
 @media (max-width: 992px) {
