--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -293,6 +293,7 @@ header.dark-theme {
   
     .btn.btn-success:hover {
     background-color: rgb(0, 90, 0);
+    color: white;
     }
   
     .btn.btn-warning {
@@ -302,6 +303,7 @@ header.dark-theme {
   
     .btn.btn-warning:hover {
       background-color: rgb(95, 95, 0);
+      color: white;
     }
   @media (min-width: 991px) {
     #navbarContent a,i  {
